[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/PNG/Lasers/laserRed01.png" type="Texture" id=1]
[ext_resource path="res://src/ProjectTiles/Shooter.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 44.0

[node name="Shooter" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="LaserSkin" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.5, 2.6226e-06 )
scale = Vector2( 0.55, 2.6 )

[node name="ExplotionPosition" type="Position2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Shooter_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
